envoy.yaml
admin:
  access_log_path: '/tmp/admin_access.log'
  address:
    socket_address:
      protocol: 'TCP'
      address: '127.0.0.1'
      port_value: 9901
static_resources:
  listeners:
  - name: 'listener_0'
    address:
      socket_address:
        protocol: 'TCP'
        address: '0.0.0.0'
        port_value: 8080
    filter_chains:
    - filters:
      - name: 'envoy.http_connection_manager'
        config:
          stat_prefix: 'ingress_http'
          route_config:
            name: 'local_route'
            virtual_hosts:
            - name: 'local_service'
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: 'service_internal'
          http_filters:
          - name: 'envoy.router'
  clusters:
  - name: 'service_internal'
    connect_timeout: '0.25s'
    type: 'STRICT_DNS'
    dns_resolvers:
      socket_address:
        address: '172.20.64.2'
        port_value: 53
    dns_refresh_rate: '1s'
    lb_policy: 'ROUND_ROBIN'
    health_checks:
      - interval: '5s'
        timeout: '3s'
        unhealthy_threshold: 3
        healthy_threshold: 3
        http_health_check:
          path: '/'
        event_log_path: '/tmp/health_check_event.log'
    drain_connections_on_host_removal: true
    upstream_connection_options:
      tcp_keepalive:
        keepalive_probes: 9
        keepalive_time: 7200
        keepalive_interval: 75
    hosts:
      - socket_address:
          address: 'upstream'
          port_value: 80
